An attempt to add another expanding nav style which led to an overflow issues I'm still investigating

--- a/src/scss/navigation/_breadcrumb.scss
+++ b/src/scss/navigation/_breadcrumb.scss
@@ -1,5 +1,11 @@
 nav {
   ol {
+    ol,
+    ul,
+    dl {
+      display: inline;
+    }
+
     li {
       display: inline;
 
