--- a/src/scss/navigation/_expand.scss
+++ b/src/scss/navigation/_expand.scss
@@ -93,6 +93,7 @@ details {
 // https://www.nngroup.com/articles/table-of-contents/
 nav {
   details {
+    // Unordered table of contents
     ul {
       li {
         padding-left: calc(var(--gutter) * 1.5);
@@ -115,5 +116,82 @@ nav {
         }
       }
     }
+
+    ol,
+    ul,
+    dl,
+    li,
+    ol a {
+      display: block;
+    }
+
+    // Ordered table of contents
+    ol {
+      // counter-reset: item;
+      // Breadcrumb makes this inline
+      // display: block !important;
+      border: dashed 3px olive;
+
+      // & > li {
+      //   display: table;
+      //   margin-bottom: var(--gutter);
+
+      //   // &:last-child {
+      //   //   // margin-bottom: 0;
+      //   //   margin-top: var(--gutter);
+      //   // }
+
+      //   // &::before {
+      //   //   content: counters(item, ".", decimal-leading-zero) "";
+      //   //   display: table-cell;
+      //   //   padding: 0 calc(var(--gutter) / 2) 0 0;
+      //   // }
+
+      //   // Hang-over from the crumbtrail
+      //   &::after {
+      //     display: none;
+      //   }
+      // }
+
+      li {
+        border: solid 2px blue;
+        // ol {
+        //   & > li {
+        //     &::before {
+        //       content: counters(item, ".") " ";
+        //       vertical-align: top;
+        //     }
+        //   }
+        // }
+      }
+
+      // Crumbtrail reset
+      a {
+        border: solid 2px maroon;
+        margin: 0;
+      }
+
+      // ol {
+      //   display: table-cell;
+      // }
+    }
+
+    // Just the first level of the ordered list gets this heading style for the counter
+    // & > ol {
+    //   & > li,
+    //   & > li:last-child {
+    //     margin: 0;
+
+    //     &::before {
+    //       color: var(--tint5);
+    //       font-size: var(--h2-size);
+    //       font-weight: var(--heading-weight);
+    //       line-height: 0.9;
+    //       padding: 0 var(--gutter) 0 0;
+    //       // Magic numbers warning
+    //       // transform: translateY(calc(var(--gutter) * 0.5));
+    //     }
+    //   }
+    // }
   }
 }
